--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/AppTheme"
          >
         <activity
-            android:name="com.up.games.memorygame.MainActivity_SavedInstance"
+            android:name="com.up.games.memorygame.MainActivity"
             android:screenOrientation="portrait"
             android:label="@string/app_name" >
             <intent-filter>
